# scenario

./: .gitattributes  .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  Makefile  README.md  TESTING.md  package.json
python/: .env.example  CHANGELOG.md  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
python/.cursor/rules/: python.mdc
python/examples/: test_api_service_mocking.py  test_audio_to_audio.py  test_audio_to_text.py  test_azure_api_gateway.py  test_custom_judge_llm.py  test_custom_judge_with_traces.py  test_database_tool_mocking.py  test_false_assumptions.py  test_llm_provider_mocking.py  test_lovable_clone.py  test_mocked_weather_agent_tool.py  test_running_in_parallel.py  test_running_in_parallel_with_arun.py  test_simple_tool_mocking.py  test_span_based_evaluation_langwatch.py  test_span_based_evaluation_native_otel.py  test_testing_remote_agents_json.py  test_testing_remote_agents_sse.py  test_testing_remote_agents_stateful.py  test_testing_remote_agents_streaming.py  test_tool_failure_simulation.py  test_travel_agent.py  test_vegetarian_recipe_agent.py  test_voice_to_voice_conversation.py  test_weather_agent.py  test_weather_agent__gemini.py
python/examples/custom_observability/: conftest.py  test_conftest_integration.py  test_custom_scopes.py  test_no_auto_init.py  test_scenario_only.py
python/examples/helpers/: __init__.py  audio_helpers.py  judge_audio_wrapper.py  openai_voice_agent.py
python/examples/lovable_clone/: lovable_agent.py  print_node.py
python/examples/voice/: _bot_lifecycle.py  _pipecat_twilio_bot.py  _recording_helper.py  accent_loop.py  angry_customer.py  background_handoff.py  basic_greeting.py  dtmf_ivr.py  elevenlabs_branded.py  elevenlabs_hosted.py  elevenlabs_interruption.py  emotional_escalation.py  gemini_live.py  gemini_live_interruption.py  getting_started.py  interruption_recovery.py  long_hold.py  multi_intent.py  observability.py  openai_realtime_agent.py  openai_realtime_user.py  pipecat_scenario.py  pipecat_ws.py  prerecorded_audio.py  random_interruptions.py  recording_playback.py  silence_handling.py  stt_swap.py  tool_verification.py  twilio_inbound.py  twilio_outbound.py  voice_text_parity.py
python/outputs/: README.md
python/outputs/recordings/: README.md
python/recordings/: README.md
python/recordings/angry_customer/: manifest.json
python/recordings/basic_greeting/: manifest.json
python/recordings/elevenlabs_branded/: manifest.json
python/recordings/elevenlabs_hosted/: manifest.json
python/recordings/gemini_live_interruption/: manifest.json
python/recordings/interruption_recovery/: manifest.json
python/recordings/openai_realtime_agent/: manifest.json
python/recordings/pipecat_ws/: manifest.json
python/recordings/random_interruptions/: manifest.json
python/recordings/stt_swap/: manifest.json
python/recordings/twilio_inbound/: manifest.json
python/recordings/twilio_outbound/: manifest.json
python/scenario/: __init__.py  agent_adapter.py  cli.py  judge_agent.py  pytest_plugin.py  red_team_agent.py  scenario_executor.py  scenario_state.py  script.py  types.py  user_simulator_agent.py
python/scenario/_events/: event_reporter.py  utils.py
python/scenario/_judge/: __init__.py  deep_transform.py  estimate_tokens.py  judge_span_digest_formatter.py  judge_utils.py  span_utils.py  string_deduplicator.py  trace_tools.py  truncate_media.py
python/scenario/_red_team/: __init__.py  base.py  crescendo.py  goat.py  redteaming.md  techniques.py  techniques_goat.py
python/scenario/_tracing/: live.py  (+6 more)
python/scripts/: gen_capability_matrix.py  generate_noise_samples.py
python/tests/: test_agent_input_serialization.py  test_arun_adk_integration.py  test_arun_asyncio_concurrent.py  test_arun_batch_sharing.py  test_arun_cache.py  test_arun_cancellation.py  test_arun_drain_on_error.py  test_arun_exception_chain.py  test_arun_flaky_reruns.py  test_arun_grpc_integration.py  test_arun_multi_turn_traces.py  test_arun_real_llm_integration.py  test_arun_user_spans.py  test_async_native_parallelism.py  test_attack_techniques.py  test_capability_matrix.py  test_context_window_exceeded_integration.py  test_convert_messages_serialization.py  test_estimate_tokens.py  test_event_reporter.py  test_filtering_exporter.py  test_judge_agent.py  test_judge_agent_progressive.py  test_judge_context_api.py  test_judge_discovery_exhaustion.py  test_judge_discovery_integration.py  test_judge_force_verdict_hardening.py  test_judge_span_collector.py  test_judge_span_digest_formatter.py  test_judge_utilities.py  test_live_tracing.py  test_model_config.py  test_public_modality_api.py  test_red_team_agent.py  test_scenario.py  test_scenario_agent.py  test_scenario_executor.py  test_scenario_executor_events.py  test_scenario_role_attributes.py  test_scenario_scope_attribute.py  (+7 more)
(+682 files in other folders)
